--- a/index.html
+++ b/index.html
@@ -78,25 +78,30 @@
   <section id="projects" class="projects-section bg-light">
     <div class="container">
 
-      <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-        <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/typing101.png" alt="">
+      <!-- Project One Row -->
+      <div class="row justify-content-center no-gutters mb-3rem mb-lg-0">
+        <div class="col-xl-8 col-lg-8">
+          <img class="img-fluid" src="img/typing101.png" alt="">
         </div>
-        <div class="col-xl-4 col-lg-5">
-          <div class="featured-text text-center text-lg-left">
-            <h4>Typing101</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+        <div class="col-xl-4 col-lg-4">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Typing101</h4>
+                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
+      <!-- Project Two Row -->
+      <div class="row justify-content-center no-gutters mb-3rem mb-lg-0">
+        <div class="col-xl-8 col-lg-8">
           <img class="img-fluid" src="img/mykanvas.png" alt="">
         </div>
-        <div class="col-lg-6">
+        <div class="col-xl-4 col-lg-4 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
@@ -109,12 +114,12 @@
         </div>
       </div>
 
-      <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters">
-        <div class="col-lg-6">
+      <!-- Project Three Row -->
+      <div class="row justify-content-center no-gutters mb-3rem mb-lg-0">
+        <div class="col-xl-8 col-lg-8">
           <img class="img-fluid" src="img/schedule.jpg" alt="">
         </div>
-        <div class="col-lg-6 order-lg-first">
+        <div class="col-xl-4 col-lg-4">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
@@ -140,7 +145,7 @@
           <h2 class="text-white mb-5">Let's connect!</h2>
 
           <form class="form-inline d-flex">
-            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="noemiromero986@gamil.com">
+            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="email address">
             <button type="submit" class="btn btn-primary mx-auto">Email Me</button>
           </form>
 
@@ -161,7 +166,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="small text-black-50">5309 W. Henderson Chicago, Il 60641</div>
+              <div class="small text-black-50">5309 W. Henderson Chicago, IL 60641</div>
             </div>
           </div>
         </div>
@@ -173,7 +178,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hnoemiromero986@gmail.com</a>
+                <a href="#">noemiromero986@gmail.com</a>
               </div>
             </div>
           </div>
