added resume and about me

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
           </li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://docs.google.com/document/d/1-Qyzn2peDr7MVCL-_L-UCa2yVsP28VDWaEWG4pCEihQ/edit?usp=sharing">Resume</a></li>
         </ul>
       </div>
     </div>
@@ -55,7 +56,7 @@
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">NOEMI</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Passionate, Dedicated and Creative Software Engineer</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">My Projects</a>
+        <a href="#projects" class="btn btn-primary js-scroll-trigger">My Projects</a>
       </div>
     </div>
   </header>
@@ -65,9 +66,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">LIZBETH BAHENA DESIGNING SERVICES </h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">About Me</h2>
+          <p class="text-white-50">I seek to create useful solutions whether as a programmer, a parent or a nanny. I enjoy creating new projects and giving a purpose to them. I understand the importance of working as part of a team as well as staying focused on the objective. For me, quitting is not an option. I am a problem solver, always learning, never stopping!
+            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. In addition to my recent intensive training as a full-stack web developer, I also co-founded and help to manage a non-profit organization that helps to feed low income families and homeless people. This experience has allowed me to test my own limits and inspired me to be more proactive in everything I do.
+.</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
