Added my picture

--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
+          <img class="img-fluid" src="img/headshot.jpg" alt="">
           <h2 class="text-white mb-4">About Me</h2>
           <p class="text-white-50">I seek to create useful solutions whether as a programmer, a parent or a nanny. I enjoy creating new projects and giving a purpose to them. I understand the importance of working as part of a team as well as staying focused on the objective. For me, quitting is not an option. I am a problem solver, always learning, never stopping!
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. In addition to my recent intensive training as a full-stack web developer, I also co-founded and help to manage a non-profit organization that helps to feed low income families and homeless people. This experience has allowed me to test my own limits and inspired me to be more proactive in everything I do.
+            <a href="https://i.pinimg.com/474x/f2/77/aa/f277aad0f5334b6a32011c80cc43e4a8--wallpapers-for-desktop-iphone-wallpaper.jpg">the preview page</a>. In addition to my recent intensive training as a full-stack web developer, I also co-founded and help to manage a non-profit organization that helps to feed low income families and homeless people. This experience has allowed me to test my own limits and inspired me to be more proactive in everything I do.
 .</p>
         </div>
       </div>
