Added projects description

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Typing101</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <p class="mb-0 text-white-50">An interactive educational typing game. Built using HTML, CSS< JQuery</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -109,7 +109,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">MyKanvas</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <p class="mb-0 text-white-50">Interactive website that allows you to create your own story through your favorite pictures. Built using Express, Node.js, Mongod, HTML, CSS</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -127,7 +127,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Food Pantry Management</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <p class="mb-0 text-white-50">Intake management system that helps food pantries manage family registration, pickups and schedules in one place. Built using Sinatra, Postgresql, and ReactJS</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
