added personal links for facebook, linkedin and github

--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
       </div>
 
       <div class="social d-flex justify-content-center">
-        <a href="#" class="mx-2">
-          <i class="fab fa-twitter"></i>
+        <a href="https://www.linkedin.com/in/noemi-romero/" class="mx-2">
+          <i class="fab fa-linkedin"></i>
         </a>
-        <a href="#" class="mx-2">
+        <a href="https://www.facebook.com/noemi.romero.982" class="mx-2">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="#" class="mx-2">
+        <a href="https://github.com/NoemiR" class="mx-2">
           <i class="fab fa-github"></i>
         </a>
       </div>
