added skills section and icons

--- a/index.html
+++ b/index.html
@@ -138,6 +138,43 @@
     </div>
   </section>
 
+<!-- Skills Section -->
+    <div class="w-100 justify-content-center">
+        <h4 class="mb-4" style="display: flex;">Skills</h4>
+      
+      <div class="social d-flex justify-content-center">
+        <a href="#" class="mx-2">
+          <i class="fab fa-node-js" style="font-size: -webkit-xxx-large;"></i>
+        </a>
+        <a href="#" class="mx-2">
+          <i class="fab fa-html5" style="font-size: -webkit-xxx-large;"></i>
+        </a>
+        <a href="#" class="mx-2">
+          <i class="fab fa-js" style="font-size: -webkit-xxx-large;"></i>
+        </a>
+        <a href="#" class="mx-2">
+          <i class="fab fa-less" style="font-size: -webkit-xxx-large;"></i>
+        </a>
+        <a href="#" class="mx-2">
+          <i class="fab fa-bitbucket" style="font-size: -webkit-xxx-large;"></i>
+        </a>
+         <a href="#" class="mx-2">
+          <i class="fab fa-github" style="font-size: -webkit-xxx-large;"></i>
+        </a>
+         <a href="#" class="mx-2">
+          <i class="fab fa-react" style="font-size: -webkit-xxx-large;"></i>
+        </a>
+         <a href="#" class="mx-2">
+          <i class="fab fa-css3" style="font-size: -webkit-xxx-large;"></i>
+        </a>
+         <a href="#" class="mx-2">
+          <i class="fab fa-database" style="font-size: -webkit-xxx-large;"></i>
+        </a>
+      </div>
+    </div>
+
+ 
+  
   <!-- Signup Section -->
   <section id="signup" class="signup-section">
     <div class="container">
