styled bg for skills and singup section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   </section>
 
 <!-- Skills Section -->
-    <div class="w-100 justify-content-center">
+    <div class="w-100 justify-content-center bg-light">
         <h4 class="mb-4" style="display: flex;">Skills</h4>
       
       <div class="social d-flex justify-content-center">
@@ -184,11 +184,11 @@
           <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
           <h2 class="text-white mb-5">Let's connect!</h2>
 
-          <form class="form-inline d-flex">
+    <!--       <form class="form-inline d-flex">
             <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="email address">
             <button type="submit" class="btn btn-primary mx-auto">Email Me</button>
           </form>
-
+ -->
         </div>
       </div>
     </div>
