added h5 for my projects

--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
   <!-- Projects Section -->
   <section id="projects" class="projects-section bg-light">
     <div class="container">
+      <h2 class="text-black mb-5 text-center" style="font-size: 4rem;">My Projects!</h2>
 
       <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-3rem mb-lg-0">
+      <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
         <div class="col-xl-8 col-lg-8">
           <img class="img-fluid" src="img/typing101.png" alt="">
         </div>
@@ -100,7 +101,7 @@
       </div>
 
       <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters mb-3rem mb-lg-0">
+      <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
         <div class="col-xl-8 col-lg-8">
           <img class="img-fluid" src="img/mykanvas.png" alt="">
         </div>
@@ -118,7 +119,7 @@
       </div>
 
       <!-- Project Three Row -->
-      <div class="row justify-content-center no-gutters mb-3rem mb-lg-0">
+      <div class="row justify-content-center no-gutters"style="margin-bottom: 2rem;">
         <div class="col-xl-8 col-lg-8">
           <img class="img-fluid" src="img/schedule.jpg" alt="">
         </div>
@@ -139,9 +140,10 @@
   </section>
 
 <!-- Skills Section -->
-    <div class="w-100 justify-content-center bg-light">
-        <h4 class="mb-4" style="display: flex;">Skills</h4>
-      
+    <section class="w-100 justify-content-center bg-light">
+      <div class="container">
+       <h2 class="text-black mb-3 text-center" style="font-size: 4rem;">Skills</h2>
+       <h5 class="text-black mb-2 text-center">Never stop learning!</h5>
       <div class="social d-flex justify-content-center">
         <a href="#" class="mx-2">
           <i class="fab fa-node-js" style="font-size: -webkit-xxx-large;"></i>
@@ -172,6 +174,7 @@
         </a>
       </div>
     </div>
+  </section>
 
  
   
