--- a/index.html
+++ b/index.html
@@ -68,11 +68,16 @@
         <div class="col-lg-8 mx-auto">
           <img src="img/headshot.jpg" class="img-fluid" alt="" style="height: 400px;">
           <h2 class="text-white mb-4">About Me</h2>
-          <p class="text-white-50">I seek to create useful solutions whether as a programmer, a parent or a nanny. I enjoy creating new projects and giving a purpose to them. I understand the importance of working as part of a team as well as staying focused on the objective. For me, quitting is not an option. I am a problem solver, always learning, never stopping!<br>
-           
+          <p class="text-white-50">My name is Noemi Romero. I am a dreamer, a fighter, a seeker and a mom.<br>
 
-            In addition to my recent intensive training as a full-stack web developer, I also co-founded and help to manage a non-profit organization that helps to feed low income families and homeless people. This experience has allowed me to test my own limits and inspired me to be more proactive in everything I do.
-.</p>
+          Since I was in high school, I always wanted to be a programmer. In Spring of 2018, I took the Web Development Immersive Bootcamp at General Assembly. I went from being a nanny to coding full-time. The best part of the Bootcamp was being exposed to so many programming languages and being able to create my own projects.<br>
+
+          I also Co-founded a non-profit organization to help low-income families and the homeless community through a food pantry, homeless activities, and special events. This volunteer experience cultivated my empathetic nature to the needs of people and projects.<br>
+
+          I am currently a Software Engineer Intern at an amazing startup called 4Degrees. This experience has allowed me to get some real-life experience. I have learned to be a team player as well as continually improving my skills. I enjoy working in a professional environment where everyone learns from everyone.<br> 
+
+          Now I’m looking to work for a mission-driven company where I can make an impact and develop my skills even more. I look forward to joining your team.
+.         </p>
         </div>
       </div>
      
