added marging bottom

--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
     <section class="w-100 justify-content-center bg-light">
       <div class="container">
        <h2 class="text-black mb-3 text-center" style="font-size: 4rem;">Skills</h2>
-       <h5 class="text-black mb-2 text-center">Always learning!</h5>
-      <div class="social d-flex justify-content-center">
+      <div class="social mb-3 d-flex justify-content-center">
         <a href="#" class="mx-2">
           <i class="fab fa-node-js" style="font-size: -webkit-xxx-large;"></i>
         </a>
