added ability to click on the project's title

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <!-- Projects Section -->
   <section id="projects" class="projects-section bg-light">
     <div class="container">
-      <h2 class="text-black mb-5 text-center" style="font-size: 4rem;">My Projects!</h2>
+      <h2 class="mb-5 text-center" style="font-size: 4rem; color: #64a19d">My Projects!</h2>
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
@@ -98,7 +98,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Typing101</h4>
+                <a href="https://noemir.github.io/TYPING-101/">Typing 101</a>
                 <p class="mb-0 text-white-50">An interactive educational typing game. Built using HTML, CSS, and JQuery</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -116,7 +116,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">MyKanvas</h4>
+                <a href="https://mykanvas.herokuapp.com/auth/home">Mykanvas</a>
                 <p class="mb-0 text-white-50">Interactive website that allows you to create your own story through your favorite pictures. Built using Express, Node.js, MongoDB, HTML, and CSS</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -134,7 +134,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Food Pantry Management</h4>
+                <a href="https://food-pantry-management.herokuapp.com/">Food Pantry Management</a>
                 <p class="mb-0 text-white-50">Intake management system that helps food pantries manage family registration, pickups and schedules in one place. Built using Sinatra, Postgresql, and ReactJS</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
