refer button to about me

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">NOEMI</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Passionate, Dedicated and Creative Software Engineer</h2>
-        <a href="#projects" class="btn btn-primary js-scroll-trigger">My Projects</a>
+        <a href="#about" class="btn btn-primary js-scroll-trigger">About Me</a>
       </div>
     </div>
   </header>
