--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="small text-black-50">5309 W. Henderson Chicago, IL 60641</div>
+              <div class="small text-black-50">Chicago, IL </div>
             </div>
           </div>
         </div>
@@ -240,13 +240,13 @@
       </div>
 
       <div class="social d-flex justify-content-center">
-        <a href="https://www.linkedin.com/in/noemi-romero/" class="mx-2">
+        <a href="https://www.linkedin.com/in/noemi-romero/" class="mx-2" target="_blank">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://www.facebook.com/noemi.romero.982" class="mx-2">
+        <a href="https://www.facebook.com/noemi.romero.982" class="mx-2" target="_blank">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="https://github.com/NoemiR" class="mx-2">
+        <a href="https://github.com/NoemiR" class="mx-2" target="_blank">
           <i class="fab fa-github"></i>
         </a>
       </div>
