added resume pdf

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
           </li>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://docs.google.com/document/d/1-Qyzn2peDr7MVCL-_L-UCa2yVsP28VDWaEWG4pCEihQ/edit?usp=sharing">Resume</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1oXqIL9dozruQqUFN-JJX-VOBtFVBY5fj/view?usp=sharing">Resume</a></li>
         </ul>
       </div>
     </div>
