Replaced Intern with Apprentice

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
           I also Co-founded a non-profit organization to help low-income families and the homeless community through a food pantry, homeless activities, and special events. This volunteer experience cultivated my empathetic nature to the needs of people and projects.<br>
 
-          I am currently a Software Engineer Intern at an amazing startup called 4Degrees. This experience has allowed me to get some real-life experience. I have learned to be a team player as well as continually improving my skills. I enjoy working in a professional environment where everyone learns from everyone.<br> 
+          I am currently a Software Engineer Apprentice at an amazing startup called 4Degrees. This experience has allowed me to get some real-life experience. I have learned to be a team player as well as continually improving my skills. I enjoy working in a professional environment where everyone learns from everyone.<br> 
 
           Now I’m looking to work for a mission-driven company where I can make an impact and develop my skills even more. I look forward to joining your team.
 .         </p>
