--- a/index.html
+++ b/index.html
@@ -60,23 +60,25 @@
       </div>
     </div>
   </header>
- <!-- <iframe width="966" height="543" src="https://www.youtube.com/embed/B-cKZGOGSZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+
+
+
   <!-- About Section -->
   <section id="about" class="about-section text-center">
     <div class="container">
-      <div class="row">
+      <div class="row" style="padding-top: 45px;">
         <div class="col-lg-8 mx-auto">
-          <img src="img/smile.jpg" class="img-fluid" alt="" style="height: 400px;">
-          <h2 class="text-white mb-4">About Me</h2>
-          <p class="text-white-50">My name is Noemi Romero. I am a dreamer, a fighter, a seeker and a mom.<br>
+          <img src="img/smile.jpg" class="img-fluid" alt="" style="height: 300px; border-radius: 200px; color: #64a09c;">
+          <h2 class="mb-4" style="color: #64a09c;">About Me</h2>
+          <p style="color: #64a09c;">My name is Noemi Romero. I am a dreamer, a fighter, a seeker and a mom.<br>
 
           In Spring of 2018, I took the Web Development Immersive Bootcamp at General Assembly. I went from being a nanny to coding full-time. <br>
 
           I also Co-founded a non-profit organization to help low-income families and the homeless community through a food pantry, homeless activities, and special events.<br>
 
-          I am currently a Software Engineer Apprentice at an amazing startup called 4Degrees. This experience has allowed me to get some real-life experience. I have learned to be a team player as well as continually improving my skills. I enjoy working in a professional environment where everyone learns from everyone.<br> 
+          <!-- I am currently a Software Engineer Apprentice at an amazing startup called 4Degrees. This experience has allowed me to get some real-life experience. I have learned to be a team player as well as continually improving my skills. I enjoy working in a professional environment where everyone learns from everyone.<br> 
 
-          Now I’m looking to work for a mission-driven company where I can make an impact and develop my skills even more. I look forward to joining your team.
+          Now I’m looking to work for a mission-driven company where I can make an impact and develop my skills even more. I look forward to joining your team. -->
 .         </p>
         </div>
       </div>
