changed background color for projects section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light">
+  <section id="projects" class="projects-section" style="background-color: #64a09c;">
     <div class="container">
       <h2 class="mb-5 text-center" style="font-size: 4rem; color: #64a19d">My Projects!</h2>
 
