redisign technical skills section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <!-- Projects Section -->
   <section id="projects" class="projects-section" style="background-color: #64a09c;">
     <div class="container">
-      <h2 class="mb-5 text-center" style="font-size: 4rem; color: #64a19d">My Projects!</h2>
+      <h2 class="mb-4 text-center" style="color: white;">My Projects!</h2>
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
@@ -144,47 +144,98 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
 <!-- Skills Section -->
-    <section class="w-100 justify-content-center bg-light">
+<section class="content-section bg-primary text-white text-center" id="services">
       <div class="container">
-       <h2 class="text-black mb-3 text-center" style="font-size: 4rem;">Skills</h2>
-      <div class="social mb-3 d-flex justify-content-center">
-        <a href="#" class="mx-2">
-          <i class="fab fa-node-js" style="font-size: -webkit-xxx-large;"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-html5" style="font-size: -webkit-xxx-large;"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-js" style="font-size: -webkit-xxx-large;"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-less" style="font-size: -webkit-xxx-large;"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-bitbucket" style="font-size: -webkit-xxx-large;"></i>
-        </a>
-         <a href="#" class="mx-2">
-          <i class="fab fa-github" style="font-size: -webkit-xxx-large;"></i>
-        </a>
-         <a href="#" class="mx-2">
-          <i class="fab fa-react" style="font-size: -webkit-xxx-large;"></i>
-        </a>
-         <a href="#" class="mx-2">
-          <i class="fab fa-css3" style="font-size: -webkit-xxx-large;"></i>
-        </a>
-         <a href="#" class="mx-2">
-          <i class="fab fa-database" style="font-size: -webkit-xxx-large;"></i>
-        </a>
+        <div class="content-section-heading">
+         <!--  <h3 class="text-secondary mb-0">Skills</h3> -->
+          <h2 class="mb-4">Technical Skills:</h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fas fa-code"></i>
+            </span>
+            <h4>
+              <strong>Code</strong>
+            </h4>
+            <p class="text-faded mb-0">Front-End &amp; Back-End Web Development</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fab fa-html5"></i>
+            </span>
+            <h4>
+              <strong>HTML</strong>
+            </h4>
+            <p class="text-faded mb-0">The skeleton that holds everything together!</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fab fa-css3-alt"></i>
+            </span>
+            <h4>
+              <strong>CSS</strong>
+            </h4>
+            <p class="text-faded mb-0">Keyframes, SASS &amp; More!
+             
+          </p></div>
+          <div class="col-lg-3 col-md-6">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fab fa-js-square"></i>
+            </span>
+            <h4>
+              <strong>JavaScript</strong>
+            </h4>
+            <p class="text-faded mb-0">JavaScript &amp; JQuery</p>
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
-
- 
+      <div class="container">
+        
+        <div class="row">
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fab fa-node"></i>
+            </span>
+            <h4>
+              <strong>Node</strong>
+            </h4>
+            <p class="text-faded mb-0">MERN Stack &amp; MEHN Stack</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fab fa-bootstrap">B</i>
+            </span>
+            <h4>
+              <strong>Bootstrap</strong>
+            </h4>
+            <p class="text-faded mb-0">Responsive, mobile-first front-end web development</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fab fa-github"></i>
+            </span>
+            <h4>
+              <strong>Github</strong>
+            </h4>
+            <p class="text-faded mb-0">Version-control platform</p>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fas fa-chevron-circle-down"></i>
+            </span>
+            <h4>
+              <strong>&amp; More</strong>
+            </h4>
+            <p class="text-faded mb-0">RESTful Routing, API, MongoDB, Express, postgreSQL, Bitbucket, Herokou &amp; More! </p>
+          </div>
+        </div>
+      </div>
+    </section>
   
   <!-- Signup Section -->
   <section id="signup" class="signup-section">
