a links increase size

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about" style="font-size: 20px;">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="#projects" style="font-size: 20px;">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#signup" style="font-size: 20px;">Contact</a>
           </li>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/185E0CL4DsHqfXkC_wvL1zpBVEmoYg_pO/view?usp=sharing">Resume</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/185E0CL4DsHqfXkC_wvL1zpBVEmoYg_pO/view?usp=sharing" style="font-size: 20px;">Resume</a></li>
         </ul>
       </div>
     </div>
@@ -55,7 +55,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">NOEMI</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Passionate, Dedicated and Creative Software Engineer</h2>
+        <h2 class="mx-auto mt-2 mb-5" style="color: rgba(255, 255, 255, .8);">Passionate, Dedicated and Creative Software Engineer</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">About Me</a>
       </div>
     </div>
@@ -89,7 +89,7 @@
   <!-- Projects Section -->
   <section id="projects" class="projects-section" style="background-color: #64a09c;">
     <div class="container">
-      <h2 class="mb-4 text-center" style="color: white;">My Projects!</h2>
+      <h1 class="mb-4 text-center" style="color: white;">My Projects!</h1>
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
@@ -151,8 +151,7 @@
 <section class="content-section bg-primary text-white text-center" id="services">
       <div class="container">
         <div class="content-section-heading">
-         <!--  <h3 class="text-secondary mb-0">Skills</h3> -->
-          <h2 class="mb-4">Technical Skills:</h2>
+          <h1 class="mb-4">Technical Skills</h1>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
