--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
           In Spring of 2018, I took the Web Development Immersive Bootcamp at General Assembly. I went from being a nanny to coding full-time. <br>
 
-          I also Co-founded a non-profit organization to help low-income families and the homeless community through a food pantry, homeless activities, and special events.<br>
+          I am a dedicated, passionate, and enthusiastic Web Developer who loves utilizing my creativity and skills to ensure the best outcome possible.<br>
 
-          <!-- I am currently a Software Engineer Apprentice at an amazing startup called 4Degrees. This experience has allowed me to get some real-life experience. I have learned to be a team player as well as continually improving my skills. I enjoy working in a professional environment where everyone learns from everyone.<br> 
+          In addition to the skills I learned at the bootcamp, apprenticeship, and internship being a single mom has taught me to multitask, persevere, to be a  great manager, to seek different solutions, to be able to perform under pressure, to be flexible and open to new ideas. But most of all have fun and enjoy every project I do.<br> 
 
-          Now I’m looking to work for a mission-driven company where I can make an impact and develop my skills even more. I look forward to joining your team. -->
+          Now I’m looking to work for a mission-driven company where I can make an impact and develop my skills even more. I look forward to joining your team.
 .         </p>
         </div>
       </div>
@@ -90,6 +90,26 @@
   <section id="projects" class="projects-section" style="background-color: #64a09c;">
     <div class="container">
       <h1 class="mb-4 text-center" style="color: white;">My Projects!</h1>
+
+      <!-- Project Two Row -->
+      <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
+        <div class="col-xl-8 col-lg-8">
+          <a href="https://charoshairdesignandspa.com/"><img class="img-fluid" src="img/service.png" alt=""></a>
+        </div>
+        <div class="col-xl-4 col-lg-4 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <a href="https://charoshairdesignandspa.com/">Charos Hair Design and Spa</a>
+                <p class="mb-0 text-white-50">Interactive website that allows you to create your own story through your favorite pictures. Built using Express, Node.js, MongoDB, HTML, and CSS</p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
@@ -112,7 +132,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
         <div class="col-xl-8 col-lg-8">
-          <img class="img-fluid" src="img/mykanvas.png" alt="">
+          <a href="https://mykanvas.herokuapp.com/auth/home"><img class="img-fluid" src="img/canvas.png" alt=""></a>
         </div>
         <div class="col-xl-4 col-lg-4 order-lg-first">
           <div class="bg-black text-center h-100 project">
