Added new projects

--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
           In addition to the skills I learned at the bootcamp, apprenticeship, and internship being a single mom has taught me to multitask, persevere, to be a  great manager, to seek different solutions, to be able to perform under pressure, to be flexible and open to new ideas. But most of all have fun and enjoy every project I do.<br> 
 
           Now I’m looking to work for a mission-driven company where I can make an impact and develop my skills even more. I look forward to joining your team.
-.         </p>
+         </p>
         </div>
-      </div>
-     
+      </div> 
     </div>
   </section>
 
@@ -91,7 +90,7 @@
     <div class="container">
       <h1 class="mb-4 text-center" style="color: white;">My Projects!</h1>
 
-      <!-- Project Two Row -->
+      <!-- Project One Row -->
       <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
         <div class="col-xl-8 col-lg-8">
           <a href="https://charoshairdesignandspa.com/"><img class="img-fluid" src="img/service.png" alt=""></a>
@@ -101,7 +100,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <a href="https://charoshairdesignandspa.com/">Charos Hair Design and Spa</a>
-                <p class="mb-0 text-white-50">Interactive website that allows you to create your own story through your favorite pictures. Built using Express, Node.js, MongoDB, HTML, and CSS</p>
+                <p class="mb-0 text-white-50">Responsive, mobile friendly website. Built using Bootstrap, HTML, Javascript, and CSS</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -110,13 +109,31 @@
       </div>
 
 
+      <!-- Project Two Row -->
+      <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
+        <div class="col-xl-8 col-lg-8">
+          <a href="https://noemir.github.io/Nail-Salon/"><img class="img-fluid" src="img/nancy.png" alt=""></a>
+        </div>
+        <div class="col-xl-4 col-lg-4">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <a href="https://noemir.github.io/Nail-Salon/">Nancys Nail</a>
+                <p class="mb-0 text-white-50">Mobile friendly website with logo. Built using Bootstrap, HTML, Javascript, and CSS</p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-      <!-- Project One Row -->
+
+      <!-- Project Three Row -->
       <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
         <div class="col-xl-8 col-lg-8">
           <img class="img-fluid" src="img/typing101.png" alt="">
         </div>
-        <div class="col-xl-4 col-lg-4">
+        <div class="col-xl-4 col-lg-4 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
@@ -129,7 +146,7 @@
         </div>
       </div>
 
-      <!-- Project Two Row -->
+      <!-- Project Four Row -->
       <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
         <div class="col-xl-8 col-lg-8">
           <a href="https://mykanvas.herokuapp.com/auth/home"><img class="img-fluid" src="img/canvas.png" alt=""></a>
@@ -147,7 +164,7 @@
         </div>
       </div>
 
-      <!-- Project Three Row -->
+      <!-- Project Five Row -->
       <div class="row justify-content-center no-gutters"style="margin-bottom: 2rem;">
         <div class="col-xl-8 col-lg-8">
           <img class="img-fluid" src="img/schedule.jpg" alt="">
