removed signup section

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about" style="font-size: 20px;">About</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects" style="font-size: 20px;">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup" style="font-size: 20px;">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#about" style="font-size: 20px;">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact" style="font-size: 20px;">Contact</a>
           </li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/185E0CL4DsHqfXkC_wvL1zpBVEmoYg_pO/view?usp=sharing" style="font-size: 20px;">Resume</a></li>
         </ul>
@@ -271,23 +271,14 @@
     </div>
   </section>
   
-  <!-- Signup Section -->
-  <section id="signup" class="signup-section">
+  <!-- Contact Section -->
+  <section id="contact" class="contact-section bg-black">
     <div class="container">
-      <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
 
           <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
           <h2 class="text-white mb-5">Let's connect!</h2>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section class="contact-section bg-black">
-    <div class="container">
-
       <div class="row">
 
         <div class="col-md-4 mb-3 mb-md-0">
