--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-black small text-center text-white-50">
+  <footer class="bg-white small text-center text-black-50">
     <div class="container">
       Copyright &copy; noemi.tech 2019
     </div>
