increased social icons size

--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
 
       <div class="social d-flex justify-content-center">
         <a href="https://www.linkedin.com/in/noemi-romero/" class="mx-2" target="_blank">
-          <i class="fab fa-linkedin"></i>
+          <i class="fab fa-linkedin" style="font-size: 1.5rem;"></i>
         </a>
         <a href="https://www.facebook.com/noemi.romero.982" class="mx-2" target="_blank">
-          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-facebook-f" style="font-size: 1.5rem;"></i>
         </a>
         <a href="https://github.com/NoemiR" class="mx-2" target="_blank">
-          <i class="fab fa-github"></i>
+          <i class="fab fa-github" style="font-size: 1.5rem;"></i>
         </a>
       </div>
 
