--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact" style="font-size: 20px;">Contact</a>
           </li>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/185E0CL4DsHqfXkC_wvL1zpBVEmoYg_pO/view?usp=sharing" style="font-size: 20px;">Resume</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://zety.com/mycv/noemiromero986gmail.com" style="font-size: 20px;">Resume</a></li>
         </ul>
       </div>
     </div>
@@ -55,7 +55,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">NOEMI</h1>
-        <h2 class="mx-auto mt-2 mb-5" style="color: rgba(255, 255, 255, .8);">Passionate, Dedicated and Creative Software Engineer</h2>
+        <h2 class="mx-auto mt-2 mb-5" style="color: rgba(255, 255, 255, .8);">Determined,Creative and Enthusiastic Software Engineer</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Projects</a>
       </div>
     </div>
@@ -260,7 +260,7 @@
 
           In Spring of 2018, I took the Web Development Immersive Bootcamp at General Assembly. I went from being a nanny to coding full-time. <br>
 
-          I am a dedicated, passionate, and enthusiastic Web Developer who loves utilizing my creativity and skills to ensure the best outcome possible.<br>
+          I am a dedicated, passionate, and motivated Web Developer who loves utilizing my creativity and skills to ensure the best outcome possible.<br>
 
           In addition to the skills I learned at the bootcamp, apprenticeship, and internship being a single mom has taught me to multitask, persevere, to be a  great manager, to seek different solutions, to be able to perform under pressure, to be flexible and open to new ideas. But most of all have fun and enjoy every project I do.<br> 
 
@@ -327,7 +327,7 @@
         <a href="https://github.com/NoemiR" class="mx-2" target="_blank">
           <i class="fab fa-github" style="font-size: 1.5rem;"></i>
         </a>
-      </div>
+      </div><br>
 
     </div>
   </section>
