--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">NOEMI</h1>
         <h2 class="mx-auto mt-2 mb-5" style="color: rgba(255, 255, 255, .8);">Determined,Creative and Enthusiastic Software Engineer</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Projects</a>
+        <a href="#projects" class="btn btn-primary js-scroll-trigger">Projects</a>
       </div>
     </div>
   </header>
