--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
         <div class="col-xl-8 col-lg-8">
-          <a href="https://noemir.github.io/Nail-Salon/"><img class="img-fluid" src="img/nancy.png" alt=""></a>
+          <a href="https://noemir.github.io/Nail-Salon/"><img class="img-fluid" src="img/nailssalon.png" alt=""></a>
         </div>
         <div class="col-xl-4 col-lg-4">
           <div class="bg-black text-center h-100 project">
